2002-10-31  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (GPP.GetObjectNames): Remove.
	(EDG): New class.
	* compiler_test.py (CompilerTest.__init__): Remove.
	* gcc_database.py (GCCTest.__init__): Add **extras parameter.
	(CPPTest.__init__): Likewise.
	(GPPTest._CreateCompiler): New method.
	
2002-06-30  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (Compiler.ParseOutput): Raise NotImplementedError,
	rather than using an assert, to indicate a method that must be
	overridden.
	* compiler_test.py (CompilerTest._GetCompiler): Likewise.
	(CompilerTest._GetCompilationSteps): Likewise.

	* compiler.py (GPP.GetExecutableName): Remove.

2002-06-19  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (SourcePosition.__init__): Remove incorrect
	assertion.
	* compiler_test.py: Substantial revisions to use filename labels.
	* gcc_database.py: Likewise.

2002-05-27  Mark Mitchell  <mitchell@doubledemon.codesourcery.com>

	* compiler.py (CompilerExecutable.__init__): Add dir parameter.
	(CompilerExecutable.Compile): Likewise.
	* compiler_test.py (CompiledExecutable): Likewise.
	(CompilerTest.__init__): Compute the directory in which test 
	outputs wil lbe placed.
	(CompilerTest.Run): Pass it to Compiler.Compile.
	(CompilerTest._GetDirectoryForTest): New method.
	(CompilerTest._MakeDirectoryRecursively): Likewise.
	(CompilerTest._MakeDirectoryForTest): Likewise.
	* executable.py (__init__): Add dir parameter.
	(Executable.Spawn): Do not allow exceptions to escape the child.
	(Executable._InitializeChild): If the initial working directory
	for the child is specified, enter that directory.
	(RedirectedExecutable._InitializeChild): Call
	Executable._InitializeChild.
	* gcc_database.py (Demangler.__init__): Add 'dir' parameter.
	(GCCTest._MakeDirectoryRecursively): Remove.
	(GCCTest._MakeDirectoryForTest): Likewise.
	(GCCTest._EnterDirectoryForTest): Likewise.
	(GCCTest._ExitDirectoryForTest): Likewise.
	(GPPTest._lock): New variable.