@@ -1,0 +1,2 @@
+<?xml version="1.0" ?>
+<class-directory><class kind="test">gcc_database.DGTest</class></class-directory>
